Fix site branding on mobile

--- a/sass/templates/_homepage.scss
+++ b/sass/templates/_homepage.scss
@@ -49,6 +49,10 @@
     justify-content: center;
     padding: 0;
     text-align: center;
+
+    @include breakpoint("md-down") {
+      padding-top: 1rem;
+    }
   }
 
   .custom-logo-link {
